# chatbot-agl

./: .gitignore  README.md  chunk-QNBI5RYF.js  chunk-ZAICD76F.js  docker-compose.yml  index.html  main-QNSO2Z3S.js  main-UJBI3HM6.js  styles-IXDREQD5.css
.github/workflows/: deploy-frontend.yml
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
backend/src/backend/: config.py  main.py  requirements.txt
backend/src/backend/agent/: graph.py  llm.py  prompts.py
backend/src/backend/app/: api.py  schemas.py
backend/src/backend/ingestion/: indexer.py
backend/src/backend/scripts/: ingest.py
backend/src/backend/tools/: web_search.py
backend/src/backend/utils/: crawler.py
backend/src/tests/backend/: conftest.py  test_config.py  test_graph.py  test_indexer.py  test_loader.py  test_prompts.py  test_qdrant_search_tool.py  test_web_search_tool.py
deploy/huggingface/: Dockerfile  README.md  app.py  requirements.txt
deploy/huggingface/src/backend/: Dockerfile  gradio.py  logging_config.py
deploy/huggingface/src/backend/agent/: state.py
deploy/huggingface/src/backend/ingestion/: embedder.py  loader.py
deploy/huggingface/src/backend/tools/: qdrant_search.py
deploy/huggingface/src/backend/vectorstore/: qdrant_client.py
frontend/: .dockerignore  Dockerfile  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.ts
frontend/src/environments/: environment.prod.ts
frontend/src/styles/: _animations.scss  _variables.scss
(+26 files in other folders)
